loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: not found: value poseBrosse
poseBrosse()
^